tests/ui/lexer/string_escapes_crlf.stderr
error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:6:24
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:6:25
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:6:25
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: cannot skip multiple lines with `\`
  --> $DIR/string_escapes_crlf.sol:15:1
   |
LL | 
   | ^
   |

error: cannot skip multiple lines with `\`
  --> $DIR/string_escapes_crlf.sol:18:1
   |
LL | 
   | ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:20:24
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:20:25
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:20:25
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:21:1
   |
LL | ...
   | ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:21:1
   |
LL | 
   | ^
   |

error: unescaped newline
  --> $DIR/string_escapes_crlf.sol:31:22
   |
LL | string constant s = "
   |                      ^
   |

error: unescaped newline
  --> $DIR/string_escapes_crlf.sol:33:29
   |
LL | string constant s = unicode"
   |                             ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:35:24
   |
LL | bytes constant s = hex"
   |                        ^
   |

error: invalid hex digit
  --> $DIR/string_escapes_crlf.sol:35:24
   |
LL | bytes constant s = hex"
   |                        ^
   |

error: aborting due to 14 previous errors

